@@ -1,2 +1,3 @@
 (import (rnrs))
-#b1
+
+(display (bytevector-u32-ref #vu8(255 255 255 255 255 255 255 255 255 255 255 255 255 255 255 253) 12 'little))
